# Taskification

./: Clang Plugin exemple  La fonction pure  Les étapes de projet.txt  L’infrastructure CLANG – LLVM  Makefile  ParameterNameChecker.cc  Readme.md  TASKIFICATION.txt  intro_AST  lien discord  madi 3 Dec.txt  main.tex  mybib.bib  une partie de rapport
Clang plugin example/: test.c
Code/: CMakeLists.txt  Readme.md  Taskification.cc  tests.c
RPC/: Makefile  Ourtest.c  fibo.c  fibo_solv.c  mpi_accelerator.c  mpi_accelerator.h  para.c  perf.c  perf_pure.c  simple.c  test.c
Report/: Makefile  main.tex  mybib.bib  rap.tex
Squelette de code/: Taskification.cc  tests.c
backup/Code/: fonction_a_tester.c  fonction_a_tester.h
backup/Rapport & presentation S1/: Les étapes de projet.txt  Première partie:La fonction pure  TASKIFICATION.txt
backup/Rapport & presentation S1/Report/: Makefile  main.tex  mybib.bib
backup/Rapport & presentation S1/presentation_1/: beamerthemeCaltech.sty  main.aux  main.nav  main.tex
backup/code_v-0/: Makefile  Task.cpp
backup/exemple_plugin/: t.c
backup/print_func_impure/: Makefile
clang_plugin/: Makefile  test.c
exemple_plugin/: Makefile  plugin.cpp
impurewarnings_plugin/: Makefile  a.out  plugin.cpp  t.c  t1.c  t2.c
presentation_1/: Makefile  beamercolorthemeCaltechBeaver.sty  bgl.odp  main.tex  main.toc
print_func_impure/: plugin1.cpp
rapport_s2/: main.tex  mybib.bib
report/: Makefile  description.md  example.md  intro.md  main.tex  mybib.bib
